change title and descritpion

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,8 +3,8 @@
 <section class="food">
     <div class="container">
         <header>
-            <h1>TwojaKuchnia a doskonały zbiór przepisów dla Ciebie!</h1>
-            <p>Dołącz, wyszukuj i dodawaj przepisy za darmo! </p>
+            <h1>MyFood doskonały zbiór przepisów dla Ciebie!</h1>
+            <p>Wyszukuj i dodawaj przepisy za darmo! </p>
         </header>
 
         <div class="row">
