--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	
-	<title>TwojaKuchnia</title>
+	<title>MyFood</title>
 	<meta name="description" content="TwojaKuchnia portal dla ludzi co nie wiedzą co zjeść">
 	<meta name="keywords" content="jedzenie, przepisy">
 	<meta name="author" content="Daniel Ziółkowski">
@@ -25,7 +25,7 @@
 
 	<header>
 		<nav class="navbar navbar-dark bg-food navbar-expand-lg">
-			<a class="navbar-brand" href="/"><img src="static/img/logo.png" width="30" height="30" class="d-inline-block mr-1 align-bottom" alt="">TwojaKuchnia</a>
+			<a class="navbar-brand" href="/"><img src="static/img/logo.png" width="30" height="30" class="d-inline-block mr-1 align-bottom" alt="">MyFood</a>
 
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainmenu" aria-controls="mainmenu" aria-expanded="false" aria-label="Przełącznik nawigacji">
 				<span class="navbar-toggler-icon"></span>
